--- a/login.html
+++ b/login.html
@@ -10,19 +10,23 @@
     <header>
         <div class="containerButton">
             <div class="buttonHeader">
-                <button type="button" id="themeButton">Thème</button>
+                <a href="" class="logo">
+                    <img src="https://placehold.co/150x100" alt="" id="logo">
+                   </a>
+                
                 <a class="langButton" href="">
                     <img class="langButton" src="https://placehold.co/100x50" alt="">
                 </a>
+                <button type="button" id="themeButton">Theme</button>
             </div>
             <div class="containerLogo">
-                 <img src="https://placehold.co/300x200" alt="" id="logo">
+              
         </div>
     </header>
     <main>
         <div class="containerTitle">
             <div class="title">
-                <p>Se connecter</p>
+                <h1>Se connecter</h1>
             </div>
         </div>
         <div class="containerForm">
@@ -57,6 +61,12 @@
                     </div>
                     <div class="btn">
                         <button type="submit" id="createAccount">Créer un compte</button>
+                    </div>
+                </fieldset>
+
+                <fieldset>
+                    <div class="btn">
+                        <a href="">J'ai oublié mon mot de passe</a>
                     </div>
                 </fieldset>
 
