--- a/login.html
+++ b/login.html
@@ -10,9 +10,9 @@
     <header>
         <div class="containerButton">
             <div class="buttonHeader">
-                <a href="" class="logo">
+                <a href="" class="containerLogo">
                     <img src="./assets/ImAT.jpg" alt="" id="logo">
-                   </a>
+                </a>
                 
                 <a class="langButton" href="">
                     <img class="langButton" src="https://placehold.co/100x50" alt="">
@@ -24,21 +24,23 @@
         </div>
     </header>
     <main>
-        <div class="containerTitle">
-            <div class="title">
+        <div class="container">
+            <div class="containerTitle">
+                <div class="title">
                 <h1>Se connecter</h1>
+                </div>
             </div>
-        </div>
+        </div>    
         <div class="containerForm">
             <form action="">
                 <fieldset>
                     <div class="form">
                         <legend>Adresse e-mail</legend>
-                        <input type="text" id="email" name="email" placeholder="Adresse e-mail" required>
+                        <input class="formInput" type="text" id="email" name="email" placeholder="Adresse e-mail" required>
                     </div>
                     <div class="form">
                         <legend>mot de passe</legend>
-                        <input type="text" id="password" name="password" placeholder="Mot de passe" required>
+                        <input class="formInput" type="text" id="password" name="password" placeholder="Mot de passe" required>
                     </div>
 
                     <div class="formRadio">
