--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
                 
                 
                 <a class="langButton" href="">
-                    <img class="" src="./assets/union-jack-26119_640.png" alt="">
+                    <img class="" id="flag" src="./assets/union-jack-26119_640.png" alt="">
                 </a>
                 <button type="button" id="themeButton">Theme</button>
             </div>
