le js fonctionne oui

--- a/creation.html
+++ b/creation.html
@@ -87,9 +87,9 @@
             
             </div>
             
-        <div class="containerWorld">
+        <div class="containerWorldCreation">
             <div class="containerRowWorld">
-                <div class="containerTitleWorld">
+                <div class="containerTitleCreation">
                     <div class="containerLegend">
                         <a href="">
                             <p>fdsfsdfdsfsfsdfsd</p>
@@ -115,7 +115,7 @@
                     <a href=""><img src="assets/ImAT.jpg" alt=""></a>
                     <a href=""><img src="assets/imASword.jpg" alt=""></a>
                 </div>
-                <div class="containerTitleWorld">
+                <div class="containerTitleCreation">
                     <div class="containerLegend">
                         <a href="">
                             <p>fdsfsdfdsfsfsdfsd</p>
