--- a/workspace.html
+++ b/workspace.html
@@ -31,6 +31,16 @@
                 <button type="button">Nouvel élément</button>
                 <button type="button">Document</button>
                 <button type="button">Dossier</button>
+                <div class="containerFilesTree">
+                    <ul class="treeCollapse">
+                        <li><a href=""><img src="" alt="">Personnagetrèslong</a></li>
+                        <li><a href=""><img src="" alt="">Personnagetrèslong</a></li>
+                        <li><a href=""><img src="" alt="">Personnagetrèslong</a></li>
+                        <li><a href=""><img src="" alt="">Personnagetrèslong</a></li>
+                        <li><a href=""><img src="" alt="">Personnagetrèslong</a></li>
+                        <li><a href=""><img src="" alt="">Personnagetrèslong</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
