--- a/creation.html
+++ b/creation.html
@@ -91,7 +91,7 @@
             <div class="containerRowWorld">
                 <div class="containerTitleCreation">
                     <div class="containerLegend">
-                        <a href="">
+                        <a href="world.html">
                             <p>fdsfsdfdsfsfsdfsd</p>
                         </a>
 
